# imgorg

./: .gitignore  CMakeLists.txt
Test/: TestFaceRecognition.cpp
src/: main.cpp
src/Core/: Application.cpp  Application.h  FaceOrganizer.h
src/FaceRecognition/: FaceComparator.h  FaceDetector.cpp  FaceDetector.h
src/FileSystem/: PathUtils.cpp  PathUtils.h
src/UI/: mainwindow.h  mainwindow.ui
src/Utils/: ImageUtils.cpp  ImageUtils.h  Logger.cpp  Logger.h  ProgressBar.h
